--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>platform-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>hw1</module>
+    </modules>
 
     <properties>
         <!--General options-->
