--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>hw1</module>
         <module>hw3</module>
+        <module>hw2</module>
     </modules>
 
     <properties>
@@ -27,6 +28,7 @@
         <!--Dependency versions-->
         <junit.version>4.13.2</junit.version>
         <assertj-core.version>3.23.1</assertj-core.version>
+        <spring-boot.version>2.7.5</spring-boot.version>
     </properties>
 
     <dependencies>
