--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>hw6</module>
         <module>hw5</module>
         <module>hw7</module>
+        <module>hw9</module>
     </modules>
 
     <properties>
