--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <module>hw5</module>
         <module>hw7</module>
         <module>hw9</module>
+        <module>hw10</module>
+        <module>hw10/report-service</module>
+        <module>hw10/domain</module>
     </modules>
 
     <properties>
